MIET-147: get correct index for a month
